<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.story.StoryViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_primary_background_color">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/topic_app_bar_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/story_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/component_color_shared_activity_toolbar_color"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Widget.AppCompat.ActionBar"
        app:navigationContentDescription="@string/navigate_up"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
          android:id="@+id/story_toolbar_title"
          style="@style/MarqueeToolbarTitleTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="20dp"
          android:text="@{viewModel.storyNameLiveData}" />
      </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/topic_app_bar_layout">

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/story_chapter_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/story_fragment_padding_bottom"
        android:scrollbars="none"
        app:data="@{viewModel.storyChapterLiveData}"
        tools:listitem="@layout/story_chapter_view" />

      <View
        android:id="@+id/story_shadow_view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/toolbar_drop_shadow" />
    </FrameLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
