<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <import type="org.oppia.android.app.model.ChapterPlayState" />

    <variable
      name="htmlContent"
      type="CharSequence" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.story.storyitemviewmodel.StoryChapterSummaryViewModel" />
  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/story_chapter_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="28dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="28dp"
      android:layout_marginBottom="16dp"
      android:clickable="@{viewModel.chapterSummary.chapterPlayState != ChapterPlayState.NOT_PLAYABLE_MISSING_PREREQUISITES}"
      android:onClick="@{(v) -> viewModel.onExplorationClicked()}"
      app:cardBackgroundColor="@color/component_color_story_activity_container_background_color"
      app:cardCornerRadius="4dp"
      app:cardElevation="@{viewModel.chapterSummary.chapterPlayState != ChapterPlayState.NOT_PLAYABLE_MISSING_PREREQUISITES ? @dimen/story_chapter_card_playable_state_elevation : @dimen/story_chapter_card_not_playable_state_elevation}">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true">

        <org.oppia.android.app.customview.LessonThumbnailImageView
          android:id="@+id/chapter_thumbnail"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          app:entityId="@{viewModel.storyId}"
          app:entityType="@{viewModel.entityType}"
          app:isBlurred="@{viewModel.chapterSummary.chapterPlayState.equals(ChapterPlayState.NOT_PLAYABLE_MISSING_PREREQUISITES)}"
          app:layout_constraintDimensionRatio="16:9"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:lessonThumbnail="@{viewModel.chapterThumbnail}" />

        <View
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:alpha="0.5"
          android:background="@{viewModel.chapterThumbnail.backgroundColorRgb}"
          android:visibility="@{viewModel.chapterSummary.chapterPlayState.equals(ChapterPlayState.NOT_PLAYABLE_MISSING_PREREQUISITES) ? View.VISIBLE : View.INVISIBLE}"
          app:layout_constraintBottom_toBottomOf="@id/chapter_thumbnail"
          app:layout_constraintEnd_toEndOf="@id/chapter_thumbnail"
          app:layout_constraintStart_toStartOf="@id/chapter_thumbnail"
          app:layout_constraintTop_toTopOf="@id/chapter_thumbnail" />

        <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="center"
          android:visibility="@{viewModel.chapterSummary.chapterPlayState.equals(ChapterPlayState.NOT_PLAYABLE_MISSING_PREREQUISITES) ? View.VISIBLE : View.INVISIBLE}"
          app:layout_constraintBottom_toBottomOf="@id/chapter_thumbnail"
          app:layout_constraintEnd_toEndOf="@id/chapter_thumbnail"
          app:layout_constraintStart_toStartOf="@id/chapter_thumbnail"
          app:layout_constraintTop_toTopOf="@id/chapter_thumbnail"
          app:srcCompat="@drawable/ic_baseline_lock_24"
          android:contentDescription="@string/lock_icon_content_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:minHeight="140dp"
          android:padding="8dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/chapter_thumbnail">

          <TextView
            android:id="@+id/chapter_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="2"
            android:text="@{viewModel.computeChapterTitleText()}"
            android:textColor="@color/component_color_shared_primary_text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

          <TextView
            android:id="@+id/chapter_summary"
            style="@style/Body"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@{htmlContent}"
            android:textColor="@color/component_color_shared_primary_text_color"
            android:textColorLink="@color/component_color_shared_link_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chapter_title"
            app:layout_constraintVertical_bias="0.0" />

          <ImageView
            android:id="@+id/chapter_completed_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@{@string/chapter_completed}"
            android:visibility="@{viewModel.chapterSummary.chapterPlayState.equals(ChapterPlayState.COMPLETED) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chapter_summary"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_check_24dp"
            app:tint="@color/component_color_shared_check_icon_color" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="28dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="28dp"
      android:layout_marginBottom="16dp"
      android:background="@color/component_color_story_activity_container_background_color"
      android:visibility="@{viewModel.chapterSummary.chapterPlayState.equals(ChapterPlayState.NOT_PLAYABLE_MISSING_PREREQUISITES) ? View.VISIBLE : View.INVISIBLE}" />
  </FrameLayout>
</layout>
