<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.story.storyitemviewmodel.StoryHeaderViewModel" />
  </data>

  <TextView
    android:id="@+id/story_progress_chapter_completed_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/story_header_view_layout_margin_start"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="@dimen/story_header_view_layout_margin_end"
    android:layout_marginBottom="8dp"
    android:fontFamily="sans-serif-medium"
    android:text="@{viewModel.computeStoryProgressChapterCompletedText()}"
    android:textColor="@color/component_color_shared_primary_text_color"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</layout>
